clusters/building-blocks/base/apps/flux/config/webhook-receiver-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webhook-receiver
  namespace: flux-system
  labels:
    app: webhook-receiver
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`flux-webhook.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: local-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: webhook-receiver
          namespace: flux-system
          passHostHeader: true
          port: 80
